--- a/main.css
+++ b/main.css
@@ -54,11 +54,11 @@ body {
 		text-align: center;
 		
 	}
-
+	.navbar-nav{
+		margin-top: 0.2em;
+	}
 	.navbar-nav li {
 		background-color: #333 !important;
-		border-radius: 0.5rem 0;
-		margin:5px 0;
 	}
 	.navbar-nav .dropdown-menu{
 		background-color: #333;
@@ -67,9 +67,8 @@ body {
 
 	.navbar-nav .dropdown-menu .dropdown-item{
 		background-color: #fff !important;
-		padding:0.8em 0;
-		border-radius: 1em;
-		margin:0.5em;
+		padding:0.4em 0;
+		margin-top:0.2em;
 	}
 
 }
